# juggler

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  derp.root  eb.json  kluge.sh  ol.json
.containers/: Dockerfile.in  (+4 more)
JugAlgo/: CMakeLists.txt  README.md
JugAlgo/JugAlgo/: Algorithm.h  IAlgoServiceSvc.h
JugAlgo/JugAlgo/detail/: DataProxy.h
JugAlgo/include/JugAlgo/: Algorithm.h
JugAlgo/include/JugAlgo/detail/: DataProxy.h
JugAlgo/src/: dummy.cpp
JugAlgo/src/components/: AlgoServiceSvc.cpp
JugAlgo/src/preload/: AlgoInit.cpp
JugBase/: CMakeLists.txt  JugBaseLinkDef.h
JugBase/JugBase/: ACTSLogger.h  Algorithm.h  DataHandle.h  DataWrapper.h  IEDMMergeTool.h  IGeoSvc.h  IParticleSvc.h  IPileUpTool.h  KeepDropSwitch.h  MetaDataHandle.h  PodioDataSvc.h  PodioLegacyDataSvc.h  Property.h  UniqueID.h  VectorHelpers.hpp
JugBase/JugBase/BField/: BFieldOptions.hpp  BFieldScalor.hpp  BFieldUtils.hpp  DD4hepBField.h  ScalableBField.hpp
JugBase/JugBase/Utilities/: Beam.h  Boost.h  GroupBy.hpp  Helpers.hpp  Options.hpp  OptionsFwd.hpp  Paths.hpp  Range.hpp  UniqueID.hpp  Utils.hpp  Vectors.hpp
JugBase/include/JugBase/Utilities/: Beam.h  Utils.hpp
JugBase/src/: ACTSLogger.cpp  KeepDropSwitch.cpp  PodioDataSvc.cpp  PodioLegacyDataSvc.cpp  dummy.cpp
JugBase/src/Plugins/: BFieldOptions.cpp  BFieldScalor.cpp  BFieldUtils.cpp  DD4hepBField.cpp
JugBase/src/Utilities/: Helpers.cpp  Options.cpp  Paths.cpp
JugBase/src/components/: ConstPileUp.h  EICDataSvc.cpp  EICDataSvc.h  EICLegacyDataSvc.cpp  EICLegacyDataSvc.h  GeoSvc.cpp  GeoSvc.h  InputCopier.cpp  MC2DummyParticle.cpp  ParticleSvc.cpp  ParticleSvc.h  PileupDigiTrackHitMergeTool.cpp  PileupDigiTrackHitMergeTool.h  PileupHitMergeTool.cpp  PileupHitMergeTool.h  PileupOverlayAlg.cpp  PileupOverlayAlg.h  PileupParticlesMergeTool.cpp  PileupParticlesMergeTool.h  PodioInput.cpp  PodioInput.h  PodioLegacyInput.cpp  PodioLegacyInput.h  PodioLegacyOutput.cpp  PodioLegacyOutput.h  PodioOutput.cpp  PodioOutput.h  PoissonPileUp.cpp  PoissonPileUp.h  RangePileUp.h  ReadTestConsumer.cxx  rootUtils.h  rootutils.h  type.cpp  type.h
JugBase/tests/options/: col_copier.py  reader_with_geosvc.py  simple_reader.py
JugDigi/: CMakeLists.txt
JugDigi/src/: CalorimeterHitDigi.cpp
JugDigi/src/components/: CalorimeterBirksCorr.cpp  CalorimeterHitDigi.cpp  CrystalEndcapsDigi.cpp  EMCalorimeterDigi.cpp  EcalTungstenSamplingDigi.cpp  ExampleCaloDigi.cpp  HadronicCalDigi.cpp  PhotoMultiplierDigi.cpp  SOIPIXTrackerDigi.cpp  ScFiBarrelCalDigi.cpp  SiliconTrackerDigi.cpp  SimTrackerHitsCollector.cpp  SimTrackerHitsMerger.cpp  UFSDTrackerDigi.cpp
JugDigi/tests/options/: example_calodigi.py  example_crystalendcapsdigi.py  example_pmtdigi.py
JugFast/: CMakeLists.txt
JugFast/src/components/: ClusterMerger.cpp  InclusiveKinematicsTruth.cpp  MC2SmearedParticle.cpp  MatchClusters.cpp  ParticlesWithTruthPID.cpp  ScatteredElectronFinder.cpp  SmearedFarForwardParticles.cpp  TruthClustering.cpp  TruthEnergyPositionClusterMerger.cpp
JugReco/: CMakeLists.txt  test
JugReco/JugReco/: ACTSLogger.h  BField.h  ClusterTypes.h  GeometryContainers.hpp  IndexSourceLink.hpp  Measurement.hpp  SimMultiTrajectory.hpp  SimSourceLink.hpp  SourceLinks.h  Track.hpp
JugReco/JugReco/Utilities/: Beam.h  Boost.h  GroupBy.hpp
JugReco/src/components/: :wq  CalorimeterHitReco.cpp  CalorimeterHitsEtaPhiProjector.cpp  CalorimeterHitsMerger.cpp  CalorimeterIslandCluster.cpp  ClusterIdentification.cpp  ClusterRecoCoG.cpp  CrystalEndcapsReco.cpp  DummyFarForwardParticles.cpp  EMCalReconstruction.cpp  EcalTungstenSamplingCluster.cpp  EcalTungstenSamplingReco.cpp  ElectronPID.cpp  EnergyPositionClusterMerger.cpp  FarForwardParticles.cpp  FarForwardParticlesOMD.cpp  FuzzyKClusters.cpp  FuzzyKClusters.h  HCalReconstruction.cpp  ImagingCalMLDataSorter.cpp  ImagingClusterReco.cpp  ImagingPixelDataCombiner.cpp  ImagingPixelDataShaper.cpp  ImagingPixelDataSorter.cpp  ImagingPixelMerger.cpp  ImagingPixelReco.cpp  ImagingTopoCluster.cpp  InclusiveKinematicsDA.cpp  InclusiveKinematicsESigma.cpp  InclusiveKinematicsElectron.cpp  InclusiveKinematicsJB.cpp  InclusiveKinematicsSigma.cpp  InclusiveKinematicseSigma.cpp  ParticleCollector.cpp  ParticleWithTruthPID.cpp  ParticlesFromTrackFit.cpp  ParticlesWithTruthPID.cpp  PhotoMultiplierReco.cpp  PhotoRingClusters.cpp  RingImagePID.cpp  (+21 more)
JugReco/tests/options/: example_crystalendcapsreco.py  testLogger.py
JugTrack/: CMakeLists.txt
JugTrack/JugTrack/: ACTSLogger.h  BField.h  DD4hepBField.h  GeometryContainers.hpp  IActsGeoSvc.h  Index.hpp  IndexSourceLink.hpp  Measurement.hpp  ProtoTrack.hpp  ProtoVertex.hpp  SimHit.hpp  SimIdentifier.hpp  SimMultiTrajectory.hpp  SimParticle.hpp  SimVertex.hpp  SourceLinks.h  Track.hpp  Trajectories.hpp
JugTrack/src/: ACTSLogger.cpp
JugTrack/src/components/: ActsGeoSvc.cpp  ActsGeoSvc.h  ActsTrajectoryReader.cpp  CKFTracking.cpp  CKFTracking.h  CKFTrackingFunction.cpp  ConformalXYPeakProtoTracks.cpp  DD4hepBField.cpp  FinderAlgoTemplate.cpp  GenFitTrackFitter.cpp  GenFitTrackFitter.h  HoughTransformProtoTracks.cpp  ParticlesFromTrackFit.cpp  ProjectTrack.cpp  ProtoTrackMatching.cpp  SingleTrackSourceLinker.cpp  TestACTSLogger.cpp  TestACTSLogger.h  TestCKFTracks.h  TrackFindingAlgorithm.cpp  TrackFindingAlgorithm.h  TrackFindingAlgorithmFunction.cpp  TrackFittingAlgorithm.cpp  TrackFittingAlgorithm.h  TrackFittingFunction.cpp  TrackParamACTSSeeding.cpp  TrackParamClusterInit.cpp  TrackParamImagingClusterInit.cpp  TrackParamTruthInit.cpp  TrackParamVertexClusterInit.cpp  TrackProjector.cpp  TrackPropagator.cpp  Tracker2SourceLinker.cpp  TrackerSourceLinker.cpp  TrackerSourcesLinker.cpp  TrackingHitsSourceLinker.cpp  TrajectoriesFromTrackFinding.cpp  TrajectoryFromTrackFit.cpp  TruthTrackSeeding.cpp
JugTrack/src/components/disabled/: TrackFittingAlgorithm.cpp  TrackFittingAlgorithm.h  TrackFittingFunction.cpp  TrackParamACTSSeeding.cpp
JugTrack/tests/options/: example_crystalendcapsreco.py
calorimetry/: CMakeLists.txt
calorimetry/src/todo/: ImagingPixelDataCombiner.cpp
(+96 files in other folders)
